--- a/backtestpro/index.html
+++ b/backtestpro/index.html
@@ -79,7 +79,7 @@
     </div>
 </nav>
       <div id="home-header">
-      <img alt="Logo image" class="big-logo" src="/../anthol42.github.io/backtestpro/assets/logo_light.svg">
+      <img alt="Logo image" class="big-logo" src="/backtestpro/assets/logo_light.svg">
       <h2 id="home-short-desc">Feature rich backtesting framework</h2>
   </div>
   <div id="home-card-presentation" class="container" style="max-width: 1100px;">
