--- a/backtestpro/get_started.html
+++ b/backtestpro/get_started.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-  <link rel="icon" type="image/x-icon" href="/backtestpro/assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/backtestpro/assets/favicon.ico?">
   <link href='/backtestpro/assets/bootstrap.min.css' rel='stylesheet', type='text/css'>
   <link href="/backtestpro/assets/style.css" rel="stylesheet" type="text/css">
   <link href="/backtestpro/assets/python_code.css" rel="stylesheet" type="text/css">
@@ -61,7 +61,7 @@
                 <div id="navbar-end">
 
                     <div class="navbar-end-item">
-                        <code class="navbar-version">v0.1.0</code>
+                        <code class="navbar-version">v0.1.1</code>
                     </div>
 
                     <div class="navbar-end-item">
@@ -101,7 +101,7 @@
                 <h2>Install</h2>
                 <p class="code-header">The easiest way to install it is with pip:</p>
                 <div class="shell-box">
-                    <pre><code>pip install backtestPro</code></pre>
+                    <pre><code>pip install backtest-pro</code></pre>
                     <div class="copy-button-container">
                         <button class="copy-button" onclick="copyToClipboard(this)"><i class='fas'>&#xf0c5;</i></button>
                     </div>
